compiler/tests/invalid_programs/syntax/invalid_method_signature.jm
!SyntaxError

def foo"bar"
end
